2020-10-19 add teste.txt

--- a/01_aulas/01_pres_intro_geocomp_r.Rmd
+++ b/01_aulas/01_pres_intro_geocomp_r.Rmd
@@ -629,7 +629,7 @@ git status
 ```{bash}
 ## Untracked files:
 ##   (use "git add <file>..." to include in what will be committed)
-##     ../teste.txt
+##     teste.txt
 ## 
 ## no changes added to commit (use "git add" and/or "git commit -a")
 ```
